css/index.css
@charset "utf-8";

/*********************
        FONTS
********************/
@font-face {
  font-family: segoeui;
  src: url(../fonts/segoeui.ttf);
}


@font-face{
    font-family: seguibl;
    src: url(../fonts/seguibl.ttf);
}

/*********************
        MAIN
********************/
#videoContainer{
    
    scroll-snap-align: start;
    flex: 1 1 auto;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    
    margin: 0 auto;
    max-width: 1920px;
    max-height: 850px;
    margin-top: 2.08vh;
    height: 44.8vw;
    background-image: url("../assets/tempVideoPlacementImg.png");
    background-repeat: no-repeat;
    background-position: center;
    color: #E0E0E0;
    width: 100%;
}

#title{
    font-size: 5.73vw;
    /*position: sticky;
    //top: 1.04vw;*/
}

#titleText{
    /*flex-shrink: 1;*/
}

#subTitle{
    font-size: 1.56vw;
}

#filters{
    scroll-snap-align: start;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    color: #E0E0E0;
    margin-top: 1.04vw;
    font-size: 1.46vw;
}

#projects{
    margin-top: 1.04vw;
    width: 64.63vw;
    margin: 0 auto;
    margin-top: 2.08vw;
    justify-content: space-around;
    flex-direction: column;
    align-items: center;
}

.tag:hover{
    cursor:pointer;
}

.column3D{
    
}

.row{
    justify-content: space-around;
    flex-direction: row;
    align-items: center;
    width: 100%;
    margin-bottom: 1.04vw;
}

.content{
    transition: all .2s ease-in-out;
    position: relative;
    text-align: center;
    width: 12.63vw;
    font-size: 2.02vw;
    cursor: pointer;
}

.overlay{
    position: absolute;
    text-align: center;
    text-justify: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    transition: .5s ease;
    font-family: seguibl;
    color: #FFFFFF;
    text-shadow: 0px 3px 12px #000000;
}

.content:hover .overlay{
    opacity: 1;
}

.content:hover .projectImg{
    transform: scale(1.05); 
    filter: blur(1px);
}

.tag{
    padding-left: 1.56vw;
    padding-right: 1.56vw;
}

